# todo-app

./: README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/db/: init.sql
backend/src/: DbManager.cpp  DbManager.hpp  main.cpp
backend/src/db/: DbManager.hpp
backend/src/model/: Task.cpp  Task.hpp
frontend/: app.js  index.html  styles.css
